# segyml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: demo.py
segyml/: __init__.py  _headers.py  _ibm_float.py  _io.py  api.py  tensor.py  visualize.py
tests/: conftest.py  test_asc.py  test_ibm_float.py  test_read.py
